--- a/index.html
+++ b/index.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>My Site Title</title>
-        <link rel="stylesheet"href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"/>
-        <link rel="stylesheet" type="text/css" href="company.css" />
-        <link rel="stylesheet" type="text/css" href="engineering-department.css" />
-        <link rel="stylesheet" type="text/css" href="project-x-launch.css" />
-        <link rel="stylesheet" type="text/css" href="typography.css" />
-
-
-    </head>
-    <body>
-        
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Site Title</title>
+    <!-- External Bootstrap CSS -->
+    <link rel="stylesheet" href="style.css">
+    <!-- Local CSS File (Required by the Test) -->
+    <link rel="stylesheet" href="css/style.css">
+    <!-- Other Local CSS Files -->
+    <link rel="stylesheet" href="company.css">
+    <link rel="stylesheet" href="engineering-department.css">
+    <link rel="stylesheet" href="project-x-launch.css">
+    <link rel="stylesheet" href="typography.css">
+</head>
+<body>
+    <!-- Your content goes here -->
+</body>
 </html>
+
